[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Animated_Pixel_Ships_v1.5.4/Plane 04/planes_04_B.png" type="Texture" id=1]
[ext_resource path="res://Scenes/scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/laserLarge_002.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Animated_Pixel_Ships_v1.5.4/Shield/shield.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.6181, 29.0864 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
length = 0.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 19, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "shield"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="CircleShape2D" id=7]
radius = 45.5413

[node name="Player" type="KinematicBody2D"]
rotation = 1.5708
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.81763, -1.26296 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.70114, -2.58338 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )

[node name="right_shoot_position" type="Position2D" parent="."]
position = Vector2( 5.92756, -21.7319 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="left_shoot_position" type="Position2D" parent="."]
position = Vector2( -10.2751, -21.4941 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.482

[node name="shield" type="Sprite" parent="."]
visible = false
position = Vector2( 1.04986, 1.19162 )
scale = Vector2( 0.70725, 0.70725 )
texture = ExtResource( 4 )
hframes = 3
vframes = 2

[node name="ShieldAnimation" type="AnimationPlayer" parent="shield"]
anims/RESET = SubResource( 5 )
anims/shield = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="shield"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shield/Area2D"]
position = Vector2( -1.86701, 3.73405 )
shape = SubResource( 7 )

[connection signal="body_entered" from="shield/Area2D" to="." method="_on_Area2D_body_entered"]
